--- a/app/views/simple_pages/index.html.erb
+++ b/app/views/simple_pages/index.html.erb
@@ -1,2 +1,55 @@
-<h1>Welcome to Bike Berlin</h1>
-<h2>Your source for used bikes in Berlin</h2>
+<section id="hero">
+	<div id="welcome-message">
+		<h1>Welcome to Bike Berlin</h1>
+		<h2>Your source for used bikes in Berlin</h2>
+	</div>
+</section><!-- end hero -->
+
+<section id="three-column-grid" class="content">
+  <div class="container">
+    <div class="row">
+
+      <div class="col-md-4 text-center">
+        <i class="column-icon fas fa-glasses"></i>
+        <h3>hipster horses</h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum corporis assumenda libero repellendus, necessitatibus praesentium nulla! Quis quod maxime minus neque dolore ab nulla, numquam. Adipisci esse dolores soluta perferendis.
+        </p>
+      </div>
+      <div class="col-md-4 text-center">
+        <i class="column-icon fas fa-bolt"></i>
+        <h3>e-bikes</h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum corporis assumenda libero repellendus, necessitatibus praesentium nulla! Quis quod maxime minus neque dolore ab nulla, numquam. Adipisci esse dolores soluta perferendis.
+        </p>
+      </div>
+      <div class="col-md-4 text-center">
+        <i class="column-icon fas fa-smile"></i>
+        <h3>awesome deals</h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum corporis assumenda libero repellendus, necessitatibus praesentium nulla! Quis quod maxime minus neque dolore ab nulla, numquam. Adipisci esse dolores soluta perferendis.
+        </p>
+      </div>
+
+    </div><!-- end three column grid -->
+</section>
+<section id="arrivals" class="content">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <h3>Latest arrivals!</h3>
+      </div>
+      <div class="col-md-4">
+        <%= image_tag("racebike.jpg", class: "img-responsive") %>
+      </div>
+      <div class="col-md-8">
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo odio nisi autem in molestiae nesciunt cupiditate quaerat quia. Deserunt ratione temporibus delectus ducimus, dignissimos provident quaerat doloremque dolor aliquam dolorum? Lorem
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo odio nisi autem in molestiae nesciunt cupiditate quaerat quia. Deserunt ratione temporibus delectus ducimus, dignissimos provident quaerat doloremque dolor aliquam dolorum? Lorem
+        </p>
+      </div>
+    </div>
+  </div> 
+</section>
