--- a/app/assets/stylesheets/simple_pages.scss
+++ b/app/assets/stylesheets/simple_pages.scss
@@ -1,3 +1,104 @@
 // Place all the styles related to the simple_pages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+// General styles
+* {
+  margin: 0;
+}
+
+html, body {
+  height: 100%;
+}
+
+h1 {
+	text-transform: uppercase;
+}
+
+.content {
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
+
+// Navbar
+.bg-light {
+  background-color: #76BEE2 !important;
+}
+
+.navbar-brand {
+  i {
+    font-size: 3vh !important;
+    text-decoration: underline;
+  }
+}
+
+// Hero image
+#hero {
+  background-image: url("/assets/bike.jpg");
+  padding-top: 50px;
+  background-attachment: fixed;
+  background-size: cover;
+  background-position: center;
+  background-position-y: 10px;
+  background-repeat: no-repeat;
+  height: 100vh;
+
+	#welcome-message {
+    color: #fff;
+    padding-top: 50px;
+    padding-left: 20px;
+  }
+
+}
+
+// Three column grid
+#three-column-grid {
+
+  .column-icon {
+    margin: 10px auto;
+    font-size: 4vh;
+    text-align: center;
+    color: #B52A34;
+  }
+  h3 {
+    // text-align: center;
+  }
+}
+
+// New arrivals
+#arrivals {
+  h3 {
+    text-transform: uppercase;
+    padding-bottom: 10px;
+  }
+
+  img {
+    max-width: 90%;
+  }
+}
+
+// Footer
+footer {
+  color: #fff;
+  background: #0D232D;
+
+  p {
+    padding: 20px;
+  }
+}
+
+// Sticky footer styles
+.page-wrap {
+  min-height: 100%;
+  /* equal to footer height */
+  margin-bottom: -100px; 
+}
+
+.page-wrap:after {
+  content: "";
+  display: block;
+}
+
+.site-footer, .page-wrap:after {
+  height: 100px; 
+}
