created db table for products, populated it with first items, changed page layout

--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,6 +1,16 @@
-<h1>Editing Product</h1>
+<section class="content">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4">
 
-<%= render 'form', product: @product %>
+      	<h1>Editing Product</h1>
 
-<%= link_to 'Show', @product %> |
-<%= link_to 'Back', products_path %>
+    		<%= render 'form', product: @product %>
+
+    		<%= link_to 'Show', @product %> |
+    		<%= link_to 'Back', products_path %>
+
+		  </div>
+    </div>
+  </div>
+</section>
