--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,5 +1,14 @@
-<h1>New Product</h1>
+<section class="content">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4">
 
-<%= render 'form', product: @product %>
+    		<h1>New Product</h1>
 
-<%= link_to 'Back', products_path %>
+    		<%= render 'form', product: @product %>
+
+    		<%= link_to 'Back', products_path %>
+      </div>
+    </div>
+  </div>
+</section>
