--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,19 +1,28 @@
-<p id="notice"><%= notice %></p>
+<section class="content">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4">
 
-<p>
-  <strong>Name:</strong>
-  <%= @product.name %>
-</p>
+    		<p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Description:</strong>
-  <%= @product.description %>
-</p>
+    		<p>
+    		  <strong>Name:</strong>
+    		  <%= @product.name %>
+    		</p>
 
-<p>
-  <strong>Image url:</strong>
-  <%= @product.image_url %>
-</p>
+    		<p>
+    		  <strong>Description:</strong>
+    		  <%= @product.description %>
+    		</p>
 
-<%= link_to 'Edit', edit_product_path(@product) %> |
-<%= link_to 'Back', products_path %>
+    		<p>
+    		  <strong>Image url:</strong>
+    		  <%= @product.image_url %>
+    		</p>
+
+    		<%= link_to 'Edit', edit_product_path(@product) %> |
+    		<%= link_to 'Back', products_path %>
+      </div>
+    </div>
+  </div>
+</section>
