migrated db, matched views to display new property 'color'

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -15,6 +15,11 @@
     		  <%= @product.description %>
     		</p>
 
+        <p>
+          <strong>Color:</strong>
+          <%= @product.color %>
+        </p>
+
     		<p>
     		  <strong>Image url:</strong>
     		  <%= @product.image_url %>
