--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,43 +1,23 @@
-<section class="content">
+<section id="products" class="content">
   <div class="container">
     <div class="row">
       <div class="col-md-4">
-        
         <p id="notice"><%= notice %></p>
-
         <h1>Products</h1>
-
-        <table>
-          <thead>
-            <tr>
-              <th>Name</th>
-              <th>Description</th>
-              <th>Color</th>
-              <th>Image url</th>
-              <th colspan="3"></th>
-            </tr>
-          </thead>
-
-          <tbody>
-            <% @products.each do |product| %>
-              <tr>
-                <td><%= product.name %></td>
-                <td><%= product.description %></td>
-                <td><%= product.color %></td>
-                <td><%= product.image_url %></td>
-                <td><%= link_to 'Show', product %></td>
-                <td><%= link_to 'Edit', edit_product_path(product) %></td>
-                <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-              </tr>
-            <% end %>
-          </tbody>
-        </table>
-
-        <br>
-
-        <%= link_to 'New Product', new_product_path %>
-
       </div>
+    </div>
+
+    <div  class="row">
+      <% @products.each do |product| %>
+        <div class="product-col col-sm-12 col-md-4 col-lg-3">
+          <div class="product">
+            <a href="#"><h3><%= product.name %></h3></a>
+            <%= image_tag(product.image_url, class: "img-fluid") %>
+            <p><%= product.description %></p>
+            <strong>$ 42</strong>
+          </div>
+        </div><!-- /col -->
+      <% end %>
     </div>
   </div>
 </section>
