--- a/app/assets/stylesheets/simple_pages.scss
+++ b/app/assets/stylesheets/simple_pages.scss
@@ -2,6 +2,14 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+
+//Colors
+$aquamarine: #76BEE2;
+$firefly: #0D232D;
+$red: #B52A34;
+$black: #000000;
+$white: #ffffff;
+
 // General styles
 * {
   margin: 0;
@@ -22,7 +30,7 @@ h1 {
 
 // Navbar
 .bg-light {
-  background-color: #76BEE2 !important;
+  background-color: $aquamarine !important;
 }
 
 .navbar-brand {
@@ -44,7 +52,7 @@ h1 {
   height: 100vh;
 
 	#welcome-message {
-    color: #fff;
+    color: $white;
     padding-top: 50px;
     padding-left: 20px;
   }
@@ -58,7 +66,7 @@ h1 {
     margin: 10px auto;
     font-size: 4vh;
     text-align: center;
-    color: #B52A34;
+    color: $red;
   }
   h3 {
     // text-align: center;
@@ -79,8 +87,8 @@ h1 {
 
 // Footer
 footer {
-  color: #fff;
-  background: #0D232D;
+  color: $white;
+  background: $firefly;
 
   p {
     padding: 20px;
