--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -22,13 +22,18 @@
   </div>
 
   <div class="field">
+    <%= form.label :color %>
+    <%= form.text_field :color %>
+  </div>
+
+  <div class="field">
     <%= form.label :image_url %>
     <%= form.text_field :image_url %>
   </div>
 
   <div class="field">
-    <%= form.label :color %>
-    <%= form.text_field :color %>
+    <%= form.label :price %>
+    <%= form.text_field :price %>
   </div>
 
   <div class="actions">
