--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -14,6 +14,7 @@
             <a href="#"><h3><%= product.name %></h3></a>
             <%= image_tag(product.image_url, class: "img-fluid") %>
             <p><%= product.description %></p>
+            <p><strong>Color: </strong><%= product.colour %></p>
             <strong>$<%= product.price %></strong>
           </div>
         </div><!-- /col -->
