--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -22,8 +22,8 @@
   </div>
 
   <div class="field">
-    <%= form.label :color %>
-    <%= form.text_field :color %>
+    <%= form.label :colour %>
+    <%= form.text_field :colour %>
   </div>
 
   <div class="field">
