--- a/app/views/simple_pages/landing_page.html.erb
+++ b/app/views/simple_pages/landing_page.html.erb
@@ -1,10 +1,36 @@
-<section id="hero">
-	<div id="welcome-message">
-		<h1>Welcome to Bike Berlin</h1>
-		<h2>Your source for used bikes in Berlin</h2>
-	</div>
-</section><!-- end hero -->
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner">
+    <!-- Products is limited to the first three items (in product controller) -->
 
+  <% @products.each do |product| %>
+
+  <div class="item<%= " active" if product == @products.first %>">    
+    <%= image_tag(product.image_url) %>
+
+    <div class="carousel-caption d-none d-md-block">
+      <%= product.name %>
+    </div>
+  </div>
+  <% end %>
+</div>
+
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+
+
+<!-- Three column grid -->
 <section id="three-column-grid" class="content">
   <div class="container">
     <div class="row">
@@ -33,6 +59,8 @@
 
     </div><!-- end three column grid -->
 </section>
+
+<!-- Latest arrivals / changed to featured product -->
 <section id="arrivals" class="content">
   <div class="container">
     <div class="row">
