--- a/app/views/simple_pages/landing_page.html.erb
+++ b/app/views/simple_pages/landing_page.html.erb
@@ -7,17 +7,15 @@
   <div class="carousel-inner">
     <!-- Products is limited to the first three items (in product controller) -->
 
-  <% @products.each do |product| %>
-
-  <div class="item<%= " active" if product == @products.first %>">    
-    <%= image_tag(product.image_url) %>
-
-    <div class="carousel-caption d-none d-md-block">
-      <%= product.name %>
-    </div>
+    <% @products.each do |product| %>
+      <div class="carousel-item<%= " active" if product == @products.first %>">    
+        <%= image_tag(product.image_url) %>
+        <div class="carousel-caption d-none d-md-block">
+          <%= product.name %>
+        </div>
+      </div>
+    <% end %>
   </div>
-  <% end %>
-</div>
 
   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
