--- a/app/views/simple_pages/landing_page.html.erb
+++ b/app/views/simple_pages/landing_page.html.erb
@@ -5,11 +5,13 @@
     <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
   </ol>
   <div class="carousel-inner">
+    
     <!-- Products is limited to the first three items (in product controller) -->
-
     <% @products.each do |product| %>
       <div class="carousel-item<%= " active" if product == @products.first %>">    
         <%= image_tag(product.image_url) %>
+
+        <!-- Carousel captions -->
         <div class="carousel-caption d-none d-md-block">
           <%= product.name %>
         </div>
@@ -17,6 +19,7 @@
     <% end %>
   </div>
 
+  <!-- Carousel controls -->
   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="sr-only">Previous</span>
