--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -6,13 +6,33 @@
         <h1>Products</h1>
       </div>
     </div>
-
+    
+     <!-- Render with passing local variables -->
+    <h3>Render passing local variables</h3>
     <div  class="row">
       <% @products.each do |product| %>
-      <!-- Render with passing local variables -->
       <%= render partial: "product", locals: {product: product} %>
       <% end %>
-
     </div>
+
+    <!-- Render using shorthand: rails sets local variable when partial whith same name as model created -->
+    <h3>Render using local variable shorhand</h3>
+    <div  class="row">
+      <% @products.each do |product| %>
+      <%= render product%>
+      <% end %>
+    </div>
+    
+    <!-- Render using collection option: A collection is an array with of objects of the same model  -->
+    <h3>Display using collection option</h3>
+    <div class="row">
+      <%= render partial: "product", collection: @products %>
+    </div>
+
+    <h3>Ultimate shorthand</h3>
+    <div class="row">
+      <%= render @products %>
+    </div>
+
   </div>
 </section>
