--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,15 +29,11 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
-          </li>
+          <li class="nav-item"> <%= link_to "Home", home_path, :class => "nav-link" %> </li>
+          <li class="nav-item"> <%= link_to "About", about_path, :class => "nav-link" %> </li>
+          <li class="nav-item"> <%= link_to "Contact", simple_pages_contact_path, :class => "nav-link" %> </li>
+          <li class="nav-item"> <%= link_to "Products", products_path, :class => "nav-link" %> </li>
+
         </ul>
       </div>
     </nav>
