--- a/app/views/simple_pages/landing_page.html.erb
+++ b/app/views/simple_pages/landing_page.html.erb
@@ -1,8 +1,8 @@
 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
   <ol class="carousel-indicators">
-    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    <% @products.each do |product| %>
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="<%= "active" if product == @products.first %>"></li>
+    <% end %>
   </ol>
   <div class="carousel-inner">
     
