--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -11,8 +11,16 @@ $black: #000000;
 $white: #ffffff;
 
 #products {
-  h1 {
+  h1, h4 {
+    margin-top: 10px;
     margin-bottom: 20px;
+  }
+  a {
+    color: $red;
+  }
+  a:hover {
+    color: $aquamarine;
+    text-decoration: none;
   }
 }
 
