--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,16 +1,1 @@
-<section id="products" class="content">
-  <div class="container">
-  	<div class="row">
-  		<% @orders.each do |order| %>
-        <div class="col-sm">
-          <h1>
-            Order # <%= order.id %>:
-            <%= link_to order.product.name, order %>
-          </h1>
-          <p><%= order.product.description %></p>
-          <strong>$ <%= order.product.price %></strong>
-        </div><!-- /col -->
-      <% end %>
-    </div>
-  </div>
-</section>
+<h1>Orders</h1>
