--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -11,16 +11,27 @@
     <h4>Render passing local variables</h4>
     <div  class="row">
       <% @products.each do |product| %>
-        <div class="product-col col-sm-12 col-md-4 col-lg-3">
-    <div class="product">
-      <a href="#"><h3><%= product.name %></h3></a>
-      <%= image_tag(product.image_url, class: "img-fluid") %>
-      <p><%= product.description %></p>
-      <p><strong>Colour: </strong><%= product.colour %></p>
-      <strong>$<%= product.price %></strong>
-    </div>
-  </div><!-- /col -->
+      <%= render partial: "product", locals: {product: product} %>
       <% end %>
+    </div>
+
+    <!-- Render using shorthand: rails sets local variable when partial whith same name as model created -->
+    <h4>Render using local variable shorthand</h4>
+    <div  class="row">
+      <% @products.each do |product| %>
+      <%= render product%>
+      <% end %>
+    </div>
+    
+    <!-- Render using collection option: A collection is an array with of objects of the same model  -->
+    <h4>Display using collection option</h4>
+    <div class="row">
+      <%= render partial: "product", collection: @products %>
+    </div>
+
+    <h4>Ultimate shorthand</h4>
+    <div class="row">
+      <%= render @products %>
     </div>
 
   </div>
