--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,6 +30,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item"> <%= link_to "Home", home_path, :class => "nav-link" %> </li>
+          <li class="nav-item"> <%= link_to "Old Home", oldHome_path, :class => "nav-link" %> </li>
           <li class="nav-item"> <%= link_to "About", about_path, :class => "nav-link" %> </li>
           <li class="nav-item"> <%= link_to "Contact", simple_pages_contact_path, :class => "nav-link" %> </li>
           <li class="nav-item"> <%= link_to "Products", products_path, :class => "nav-link" %> </li>
