--- a/app/views/simple_pages/landing_page.html.erb
+++ b/app/views/simple_pages/landing_page.html.erb
@@ -1,38 +1,40 @@
 <section id="slides">
-<div id="carouselExampleIndicators" class="carousel slide carousel-fade" data-ride="carousel">
-  <div class="carousel-inner">" data-ride="carousel">
-  
-  <!-- Carousel indicators -->
-  <ol class="carousel-indicators">
-    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-    <% @products.each do |product| %>
-    <li data-target="#carouselExampleIndicators" data-slide-to="0"></li>
-    <% end %>
-  </ol>
+  <!-- Carousel -->
+  <div id="carouselExampleIndicators" class="carousel slide carousel-fade" data-ride="carousel">
+    <div class="carousel-inner">" data-ride="carousel">
+    
+    <!-- Carousel indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+      <% @products.each do |product| %>
+      <li data-target="#carouselExampleIndicators" data-slide-to="0"></li>
+      <% end %>
+    </ol>
 
-  <!-- Carousel items -->
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img class="d-block w-100" src="/assets/bike.jpg" alt="First slide">
-      <div class="carousel-caption d-none d-md-block">
-        <h1>Welcome to Bike Berlin</h1>
-        <h2>Your source for used bikes in Berlin</h2>
-      </div>
-    </div>
-  
-    <!-- Products is limited to the first two items in the database (done in simple_pages_controller) -->
-    <% @products.each do |product| %>
-      <div class="carousel-item">    
-        <%= image_tag(product.image_url, class: "d-block w-100") %>
-
-        <!-- Carousel captions -->
+    <!-- Carousel items -->
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img class="d-block w-100" src="/assets/blue_bike_cropped.jpg" alt="First slide">
         <div class="carousel-caption d-none d-md-block">
-          <%= product.name %>
+          <h1>Welcome to Bike Berlin</h1>
+          <h2>Your source for used bikes in Berlin</h2>
         </div>
       </div>
-    <% end %>
-  </div>
-</div></section>
+    
+      <!-- Products is limited to the first two items in the database (done in simple_pages_controller) -->
+      <% @products.each do |product| %>
+        <div class="carousel-item">    
+          <%= image_tag(product.image_url, class: "d-block w-100") %>
+
+          <!-- Carousel captions -->
+          <div class="carousel-caption d-none d-md-block">
+            <%= product.name %>
+          </div>
+        </div>
+      <% end %>
+    </div>
+  </div><!-- end carousel -->
+</section>
 
   <!-- Carousel controls -->
   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
