--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -30,6 +30,7 @@ $white: #ffffff;
   margin-bottom: 20px;
 
   img {
+    width: 90%;
     border: 1px solid $firefly;
     border-radius: 5px;
     margin:auto;
@@ -38,6 +39,9 @@ $white: #ffffff;
   h3, p {
     text-align: center;
     margin-top: 10px;
+  }
+  h3 {
+        text-transform: capitalize;
   }
 
 }
