--- a/app/assets/stylesheets/simple_pages.scss
+++ b/app/assets/stylesheets/simple_pages.scss
@@ -28,10 +28,11 @@ h1 {
   padding-bottom: 40px;
 }
 
+.element-shadow { box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19); }
+
 // Navbar
 .bg-light {
   background-color: $aquamarine !important;
-  opacity: 10;
 }
 
 .navbar {
@@ -42,10 +43,24 @@ h1 {
 }
 
 // landing_page
+
+// Carousel
 .carousel-caption {
-  color: $black;
-  font-size: 2.5em;
+  font-size: 2.5vh;
   text-transform: capitalize;
+}
+
+.carousel-control-prev {
+  height: auto !important;
+}
+
+.overlay {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #000;
+    opacity: 0.2;
+    transition: all 0.2s ease-out;
 }
 
 // Hero image
@@ -81,16 +96,25 @@ h1 {
   }
 }
 
-// New arrivals
+// Arrivals
 #arrivals {
   h3 {
     text-transform: uppercase;
     padding-bottom: 10px;
   }
 
+  a {
+    color: $red;
+  }
+  a:hover {
+    color: $aquamarine;
+    text-decoration: none;
+  }
+
   img {
     max-width: 90%;
   }
+
 }
 
 // Footer
