--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,7 +1,7 @@
 <!-- display products -->
 
-  <div class="product-col col-sm-12 col-md-4 col-lg-3">
-    <div class="product">
+  <div class="product-col col-sm-12 col-md-4 col-lg-4">
+    <div class="product element-shadow">
       <a href="#"><h3><%= product.name %></h3></a>
       <%= image_tag(product.image_url, class: "img-fluid") %>
       <p><%= product.description %></p>
