--- a/app/views/simple_pages/about.html.erb
+++ b/app/views/simple_pages/about.html.erb
@@ -1,9 +1,14 @@
-<h1>About Us</h1>
-
-<h3> Berlin's bike people</h3>
-<% about = "We have the hippest bikes in town."%>
-<%= about %>
-
-<p>Come and <%= link_to "get them", simple_pages_contact_path %>!</p>
-<h3>And, of course we like kitten too:</h3>
-<img src="http://placekitten.com/300/300">
+<section id="products" class="content">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6"><h1>About Us</h1>
+        <h3> Berlin's bike people</h3>
+        <% about = "We have the hippest bikes in town."%>
+        <%= about %>
+        <p>Come and <%= link_to "get them", simple_pages_contact_path %>!</p>
+        <h3>And, of course we like kitten too:</h3>
+        <img class="img-fluid" src="http://placekitten.com/400/300">
+      </div>
+    </div>
+  </div>
+</section>
