--- a/app/views/simple_pages/contact.html.erb
+++ b/app/views/simple_pages/contact.html.erb
@@ -1,6 +1,14 @@
-<h1>Contact</h1>
-<h3>Where to find us:</h3>
-<p>
-Köpenicker Straße 126<br>
-10179 Berlin
-</p>
+<section id="products" class="content">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4">
+      	<h1>Contact</h1>
+  			<h3>Where to find us:</h3>
+  			<p>
+    			Köpenicker Straße 126<br>
+    			10179 Berlin
+  			</p>
+		  </div>
+	 </div>
+  </div>
+</section>
