--- a/app/views/simple_pages/landing_page.html.erb
+++ b/app/views/simple_pages/landing_page.html.erb
@@ -6,8 +6,10 @@
       <!-- Carousel indicators -->
       <ol class="carousel-indicators">
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <% n = 1 %>
         <% @products.each do |product| %>
-        <li data-target="#carouselExampleIndicators" data-slide-to="0"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="<%= n %>"></li>
+        <% n += 1 %>
         <% end %>
       </ol>
 
