turned img tag on about page into ruby tag

--- a/app/views/simple_pages/about.html.erb
+++ b/app/views/simple_pages/about.html.erb
@@ -7,7 +7,7 @@
         <%= about %>
         <p>Come and <%= link_to "get them", simple_pages_contact_path %>!</p>
         <h3>And, of course we like kitten too:</h3>
-        <img class="img-fluid" src="http://placekitten.com/400/300">
+        <%= image_tag("http://placekitten.com/400/300", class: "img-responsive") %>
       </div>
     </div>
   </div>
