added search for products (form, model, controller)

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,6 +36,11 @@
           <li class="nav-item"> <%= link_to "Products", products_path, :class => "nav-link" %> </li>
 
         </ul>
+        <%= form_with(url: products_path, method: 'get', local: true) do |form| %>
+  <%= form.label :q, 'Search for:' %>
+  <%= form.text_field :q, id: 'q', value: params[:q] %>
+  <%= form.submit 'Search' %>
+<% end %>
       </div>
     </nav>
 
