--- a/app/views/simple_pages/landing_page.html.erb
+++ b/app/views/simple_pages/landing_page.html.erb
@@ -22,6 +22,7 @@
           <img class="d-block w-100" src="/assets/blue_bike_cropped.jpg" alt="First slide">
           <div class="carousel-caption d-none d-md-block">
             <h1>Welcome to Bike Berlin</h1>
+             <%= params[:example_key].to_i * 10 %>
             <p>Your source for used bikes in Berlin</p>
           </div>
         </div>
@@ -53,7 +54,7 @@
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="sr-only">Next</span>
         </a>
-      </div><!-- end carousel
+      </div><!-- end carousel -->
 
 
 <!-- Three column grid -->
