--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,13 +34,11 @@
           <li class="nav-item"> <%= link_to "About", about_path, :class => "nav-link" %> </li>
           <li class="nav-item"> <%= link_to "Contact", simple_pages_contact_path, :class => "nav-link" %> </li>
           <li class="nav-item"> <%= link_to "Products", products_path, :class => "nav-link" %> </li>
-
         </ul>
-        <%= form_with(url: products_path, method: 'get', local: true) do |form| %>
-  <%= form.label :q, 'Search for:' %>
-  <%= form.text_field :q, id: 'q', value: params[:q] %>
-  <%= form.submit 'Search' %>
-<% end %>
+        <%= form_with(url: products_path, method: 'get', local: true, class: "form-inline mt-2 mt-md-0" ) do |form| %>
+        <%= form.text_field :q, id: 'q', value: params[:q], class:"form-control mr-sm-2", placeholder: "Search" %>
+        <%= form.submit 'Search', class: "btn btn-outline-success my-2 my-sm-0" %>
+        <% end %>
       </div>
     </nav>
 
