--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -2,7 +2,7 @@
 
   <div class="product-col col-sm-12 col-md-4 col-lg-4">
     <div class="product element-shadow">
-      <a href="#"><h3><%= product.name %></h3></a>
+     <h3><%= link_to product.name, product_path(product.id)%></h3>
       <%= image_tag(product.image_url, class: "img-fluid") %>
       <p><%= product.description %></p>
       <p><strong>Colour: </strong><%= product.colour %></p>
