--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,33 +1,17 @@
 <section class="content">
   <div class="container">
     <div class="row">
-      <div class="col-md-4">
 
-    		<p id="notice"><%= notice %></p>
+      <%= render 'product', product: @product %>
 
-    		<p>
-    		  <strong>Name:</strong>
-    		  <%= @product.name %>
-    		</p>
-
-    		<p>
-    		  <strong>Description:</strong>
-    		  <%= @product.description %>
-    		</p>
-
-        <p>
-          <strong>Colour:</strong>
-          <%= @product.colour %>
-        </p>
-
-    		<p>
-    		  <strong>Image url:</strong>
-    		  <%= @product.image_url %>
-    		</p>
-
-    		<%= link_to 'Edit', edit_product_path(@product) %> |
-    		<%= link_to 'Back', products_path %>
+    </div>
+    
+    <div class="row">
+      <div class="product-col col-sm-12 col-md-4 col-lg-4">
+        <%= link_to 'Edit', edit_product_path(@product), class: "btn btn-outline-success my-2 my-sm-0" %>
+        <%= link_to 'Back', products_path, class: "btn btn-outline-success my-2 my-sm-0" %>
       </div>
+
     </div>
   </div>
 </section>
