--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,6 @@
 
   <body>
     <div class="page-wrap">
-
   
     <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
       <i class="fas fa-bicycle"></i>&nbsp; <%= link_to "BikeBerlin", home_path, :class => "navbar-brand" %>
@@ -30,6 +29,16 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto text-uppercase">
+
+        <% if user_signed_in? %>
+          <li class="nav-item">
+            <%= link_to('Logout', destroy_user_session_path, method: :delete, class: "nav-link") %>
+          </li>
+          <% else %>
+          <li class="nav-item">
+            <%= link_to('Login', new_user_session_path, class: "nav-link") %>
+          </li>
+          <% end %>
           <li class="nav-item"> <%= link_to "Home", home_path, :class => "nav-link" %> </li>
           <li class="nav-item"> <%= link_to "About", about_path, :class => "nav-link" %> </li>
           <li class="nav-item"> <%= link_to "Contact", simple_pages_contact_path, :class => "nav-link" %> </li>
@@ -41,10 +50,7 @@
         <% end %>
       </div>
     </nav>
-
-      <p class="notice"><%= notice %></p>
-      <p class="alert"><%= alert %></p>
-
+      
       <%= yield %>
 
     </div><!-- end page-wrap -->
