added custom devise views

--- a/app/assets/stylesheets/simple_pages.scss
+++ b/app/assets/stylesheets/simple_pages.scss
@@ -50,6 +50,16 @@ h1 {
   }
 }
 
+.custom-link {
+    a {
+      color: $red !important;
+    }
+
+  a:hover {
+    color: $aquamarine !important;
+  }
+
+}
 // Footer
 footer {
   color: $white;
