--- a/app/views/simple_pages/contact.html.erb
+++ b/app/views/simple_pages/contact.html.erb
@@ -16,17 +16,17 @@
         
         <div class="form-group">
           <%= form.label :name %>
-          <%= form.text_field :name, class: "form-control", placeholder: "Enter Name" %>
+          <%= form.text_field :name, class: "form-control", placeholder: "Enter Name", required: true %>
         </div>
 
         <div class="form-group">
           <%= form.label :email %>
-          <%= form.text_field :email, class: "form-control", placeholder: "Enter Email" %>
+          <%= form.text_field :email, class: "form-control", placeholder: "Enter Email", type: 'email', required: true %>
         </div>
 
         <div class="form-group">
           <%= form.label :message %>
-          <%= form.text_area :message, class: "form-control", placeholder: "Enter Message", rows: 5 %>
+          <%= form.text_area :message, class: "form-control", placeholder: "Enter Message", rows: 5, required: true %>
         </div>
 
         <div>
