--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,16 @@
-<h1>Editing User</h1>
+<section id="contact" class="content">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4">
+        <h1>Editing User</h1>
 
-<%= render 'form', user: @user %>
-
-<%= link_to 'Show', @user %> |
-<%= link_to 'Back', users_path %>
+        <%= render 'form', user: @user %>
+        
+        <div class="custom-link">
+          <%= link_to 'Show', @user %> |
+          <%= link_to 'Back', users_path %>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
