--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,29 +1,40 @@
-<p id="notice"><%= notice %></p>
+<section id="contact" class="content">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4">
 
-<h1>Users</h1>
+        <p id="notice"><%= notice %></p>
 
-<table>
-  <thead>
-    <tr>
-      <th>First name</th>
-      <th>Last name</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+        <h1>Users</h1>
 
-  <tbody>
-    <% @users.each do |user| %>
-      <tr>
-        <td><%= user.first_name %></td>
-        <td><%= user.last_name %></td>
-        <td><%= link_to 'Show', user %></td>
-        <td><%= link_to 'Edit', edit_user_path(user) %></td>
-        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+        <table>
+          <thead>
+            <tr>
+              <th>First name</th>
+              <th>Last name</th>
+              <th colspan="3"></th>
+            </tr>
+          </thead>
 
-<br>
+          <tbody>
+            <% @users.each do |user| %>
+              <tr>
+                <td><%= user.first_name %></td>
+                <td><%= user.last_name %></td>
+                <td><%= link_to 'Show', user, class: "form_label btn btn-outline-success my-2 my-sm-0" %></td>
+                <td><%= link_to 'Edit', edit_user_path(user), class: "form_label btn btn-outline-success my-2 my-sm-0" %></td>
+                <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' }, class: "form_label btn btn-outline-success my-2 my-sm-0" %></td>
+              </tr>
+            <% end %>
+          </tbody>
+        </table>
 
-<%= link_to 'New User', new_user_path %>
+        <br>
+        
+        <div class="custom-link">
+          <%= link_to 'New User', new_user_path, class: "form_label btn btn-outline-success my-2 my-sm-0" %>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
