--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,9 +21,32 @@
 
   <body>
     <div class="page-wrap">
-  
+      
+      <% if notice %>
+      <section class="content">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-lg-12">
+              <p id="notice" class="alert alert-primary"><%= notice %></p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <% end %>
+
+      <% if alert %>
+       <section class="content">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-lg-12">
+              <p id="alert" class="alert alert-primary"><%= alert %></p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <% end %>
     <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-      <i class="fas fa-bicycle"></i>&nbsp; <%= link_to "BikeBerlin", home_path, :class => "navbar-brand" %>
+      <i class="fas fa-bicycle"></i>&nbsp; <%= link_to "BikeBerlin", root_path, :class => "navbar-brand" %>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -39,7 +62,7 @@
             <%= link_to('Login', new_user_session_path, class: "nav-link") %>
           </li>
           <% end %>
-          <li class="nav-item"> <%= link_to "Home", home_path, :class => "nav-link" %> </li>
+          <li class="nav-item"> <%= link_to "Home", root_path, :class => "nav-link" %> </li>
           <li class="nav-item"> <%= link_to "About", about_path, :class => "nav-link" %> </li>
           <li class="nav-item"> <%= link_to "Contact", simple_pages_contact_path, :class => "nav-link" %> </li>
           <li class="nav-item"> <%= link_to "Products", products_path, :class => "nav-link" %> </li>
