added css for better display of error message

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,11 +35,11 @@
       <% end %>
 
       <% if alert %>
-       <section class="content">
+       <section class="content custom-error-message alert alert-danger">
         <div class="container-fluid">
           <div class="row">
             <div class="col-lg-12">
-              <p id="alert" class="alert alert-primary"><%= alert %></p>
+              <p id="alert"><%= alert %></p>
             </div>
           </div>
         </div>
