changed layout of flash notice for better display

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,11 +23,11 @@
     <div class="page-wrap">
       
       <% if notice %>
-      <section class="content">
+      <section class="content custom-error-message alert alert-primary">
         <div class="container-fluid">
           <div class="row">
             <div class="col-lg-12">
-              <p id="notice" class="alert alert-primary"><%= notice %></p>
+              <p id="notice"><%= notice %></p>
             </div>
           </div>
         </div>
