--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -4,7 +4,12 @@
 
       <%= render 'product', product: @product %>
 
+      <div class="product-col col-sm-12 col-md-4 col-lg-4">
+        <%= @product.highest_rating_comment %>
+      </div>
     </div>
+
+
     
     <div class="row">
       <div class="product-col col-sm-12 col-md-4 col-lg-4">
