--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -5,18 +5,31 @@
       <%= render 'product', product: @product %>
 
       <div class="product-col col-sm-12 col-md-4 col-lg-4">
-        <%= @product.highest_rating_comment %>
+        
+        <h3>Best review</h3>
+        <%= @product.highest_rating_comment.body %>
+        
+        <h3>Worst review</h3>
+        <%= @product.lowest_rating_comment.body %>
+
       </div>
     </div>
-
-
     
     <div class="row">
       <div class="product-col col-sm-12 col-md-4 col-lg-4">
         <%= link_to 'Edit', edit_product_path(@product), class: "btn btn-outline-success my-2 my-sm-0" %>
         <%= link_to 'Back', products_path, class: "btn btn-outline-success my-2 my-sm-0" %>
       </div>
+    </div>
+  </div>
+</section>
 
+<section class="content">
+  <div class="container">
+    <div class="row">
+      <div class="product-col col-sm-12 col-md-4 col-lg-4">
+        <%= render 'new_comment' %>
+      </div>
     </div>
   </div>
 </section>
