add partial to display all comments

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -24,10 +24,11 @@
   </div>
 </section>
 
-<section class="content">
+<section>
   <div class="container">
     <div class="row">
       <div class="product-col col-sm-12 col-md-4 col-lg-4">
+        <%= render 'comments' %>
         <%= render 'new_comment' %>
       </div>
     </div>
