--- a/app/views/products/_comments.html.erb
+++ b/app/views/products/_comments.html.erb
@@ -4,7 +4,7 @@
       <div class="product-col col-sm-12 col-md-12 col-lg-12">
         <hr>
         <p><%= comment.user.first_name %> <small><em><%= "#{time_ago_in_words(comment.created_at)} ago" %></em></small></p>
-        <p><%= "Rating: #{comment.rating}/5" %></p>
+        <div class="rated" data-score="<%= comment.rating %>"></div>
         <p><%= comment.body %></p>
       </div>
     </div>
