--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -5,12 +5,24 @@
       <%= render 'product', product: @product %>
 
       <div class="product-col col-sm-12 col-md-4 col-lg-4">
+
+        <h4>Average Rating:</h4>
+        <div class="rated" data-score="<%= @product.average_rating %>"></div>
+        <p></p>
         
-        <h3>Best review</h3>
-        <%= @product.highest_rating_comment.body %>
+        <h4>Best review</h4>
+        <div class="rated" data-score="<%= @product.highest_rating_comment.rating %>"></div>        
+        <p>
+          <b><%= @product.highest_rating_comment.user.first_name %> says:</b>
+          <%= @product.highest_rating_comment.body %>
+        </p>
         
-        <h3>Worst review</h3>
-        <%= @product.lowest_rating_comment.body %>
+        <h4>Worst review</h4>
+        <div class="rated" data-score="<%= @product.highest_rating_comment.rating %>"></div>
+        <p> 
+          <b><%= @product.highest_rating_comment.user.first_name %> says:</b>
+          <%= @product.lowest_rating_comment.body %>
+        </p>
 
       </div>
     </div>
