--- a/app/views/products/_new_comment.html.erb
+++ b/app/views/products/_new_comment.html.erb
@@ -4,15 +4,18 @@
 
 
   <%= form_for([@product, @product.comments.build]) do |f| %>
-    <p>
+
+  <div class="form-group">
+    <div class="field">
       <%= f.label :body, "Comments" %><br>
-      <%= f.text_area :body %>
-    </p>
-    <p>
+      <%= f.text_area :body, class: "form-control" %>
+    </div>
+    <div class="field">
       <div class="rating"></div>
-    </p>  
-    <p>
-      <%= f.submit "Submit" %>
-    </p>
+    </div>
+    <div class="actions">
+      <%= f.submit "Submit", class: "btn btn-outline-success my-2 my-sm-0" %>
+    </div>
+  </div>
   <% end %>
 <% end %>
