clean files according to Fabio's FB in A3
-Delete text varable on HP.
-Put css files above javascript in application.html.erb.
-Add scss partial for color variables.

--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -3,12 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 //Colors
 
-$aquamarine: #76BEE2;
-$iron: #D8DCDF;
-$firefly: #0D232D;
-$red: #B52A34;
-$black: #000000;
-$white: #ffffff;
+@import 'variables';
 
 .product {
   border: 1px solid $iron;
