--- a/app/assets/stylesheets/simple_pages.scss
+++ b/app/assets/stylesheets/simple_pages.scss
@@ -2,14 +2,7 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-
-//Colors
-$aquamarine: #76BEE2;
-$iron: #D8DCDF;
-$firefly: #0D232D;
-$red: #B52A34;
-$black: #000000;
-$white: #ffffff;
+@import 'variables';
 
 // General styles
 * {
