--- a/app/views/simple_pages/about.html.erb
+++ b/app/views/simple_pages/about.html.erb
@@ -3,8 +3,7 @@
     <div class="row">
       <div class="col-md-6"><h1>About Us</h1>
         <h3> Berlin's bike people</h3>
-        <% about = "We have the hippest bikes in town."%>
-        <%= about %>
+        <p>We have the hippest bikes in town.</p>
         <p>Come and <%= link_to "get them", simple_pages_contact_path %>!</p>
         <h3>And, of course we like kitten too:</h3>
         <%= image_tag("http://placekitten.com/400/300", class: "img-responsive") %>
