simplify code for slider on landing page
Use each_with_index method and ternary operator.

--- a/app/views/simple_pages/landing_page.html.erb
+++ b/app/views/simple_pages/landing_page.html.erb
@@ -6,10 +6,8 @@
     <!-- Carousel indicators -->
     <ol class="carousel-indicators">
       <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-      <% n = 1 %>
-      <% @products.each do |product| %>
-      <li data-target="#carouselExampleIndicators" data-slide-to="<%= n %>"></li>
-      <% n += 1 %>
+      <% @products.each_with_index do |product, n| %>
+        <li data-target="#carouselExampleIndicators" data-slide-to="<%= n + 1 %>"></li>
       <% end %>
     </ol>
 
