simplify code to render featured products on landing page

--- a/app/views/simple_pages/landing_page.html.erb
+++ b/app/views/simple_pages/landing_page.html.erb
@@ -91,9 +91,7 @@
       <div class="col-md-12">
         <h3>Featured Products</h3>
       </div>
-      <% @featured_products.each do |product| %>
-      <%= render product%>
-      <% end %>
+        <%= render @featured_products%>
     </div>
   </div>
 </section>
