--- a/app/views/simple_pages/landing_page.html.erb
+++ b/app/views/simple_pages/landing_page.html.erb
@@ -17,8 +17,9 @@
       <!-- Static item -->
       <div class="carousel-item active">
         <div class="overlay"></div>
-        <img class="d-block w-100" src="/assets/blue_bike_cropped.jpg" alt="First slide">
-        <div class="carousel-caption d-none d-md-block">
+        <div class="custom-carousel-image" style="background-image: url('/assets/blue_bike_cropped.jpg'); alt="First slide">
+        </div>
+        <div class="carousel-caption d-md-block">
           <h1>Welcome to Bike Berlin</h1>
           <p>Your source for used bikes in Berlin</p>
         </div>
@@ -27,13 +28,13 @@
       <!-- Dynamic items -->
       <!-- @products is limited to the first two items in the database (done in simple_pages_controller) -->
       <% @products.each do |product| %>
-        
         <div class="carousel-item">   
           <div class="overlay"></div>
-          <%= image_tag(product.image_url, class: "d-block w-100") %>
+          <div class="custom-carousel-image" style="background-image: url('<%= product.image_url %>');">
+          </div>
 
           <!-- Carousel captions -->
-          <div class="carousel-caption d-none d-md-block">
+          <div class="carousel-caption d-md-block">
             <h1><%= product.name %></h1>
             <p>$<%= product.price %></p>
           </div>
